Reverse welcome banner show/hide logic Don't try to show banner on smallish screen Fixes #1951

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -613,7 +613,7 @@ body.compact {
 
     #banner,
     .welcome {
-      display: block;
+      display: none;
     }
 
     #sidebar_content {
